Use the new version, and don't treat each line separately
