# DidacticalEnigma.Next/Models/WordInfoResponse.cs
@@ -6,7 +6,7 @@ namespace DidacticalEnigma.Next.Models
     public class WordInfoResponse
     {
         [Required]
-        public IEnumerable<IEnumerable<Models.WordInfo>> WordInformation { get; set; }
+        public IEnumerable<Models.WordInfo> WordInformation { get; set; }
         
         [Required]
         public IReadOnlyDictionary<string, IReadOnlyList<SimilarLetter>> SimilarLetters { get; set; }
